# fusion-teams

./: README.md  fusion-teams.code-workspace
src/deriving_excellent_mortgage_insights/: infra.sh  pyproject.toml  requirements.txt  startup.sh
src/deriving_excellent_mortgage_insights/.azure/: config
src/deriving_excellent_mortgage_insights/deriving_excellent_mortgage_insights/: app.py  mutations.py  queries.py
